# pytest-replay

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  README.rst  RELEASING.rst  appveyor.yml  pyproject.toml  pytest_replay.py  setup.py  tox.ini
.github/workflows/: deploy.yml  main.yml  test.yml
src/pytest_replay/: __init__.py
tests/: conftest.py  test_replay.py  test_replay_xdist.py
