[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "setuptools_scm"]

[tool.setuptools_scm]

[project]
name = "pytest-replay"
authors = [
    { name = "ESSS", email = "foss@esss.co" },
]
dynamic = ["version"]
license = { text = "MIT" }
urls = { Homepage = "https://github.com/ESSS/pytest-replay" }
description = "Saves previous test runs and allow re-execute previous pytest runs to reproduce crashes or flaky tests"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "pytest",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }

[project.entry-points.pytest11]
replay = "pytest_replay"
